# molecule-core

./: .auto_promote_trigger  .coverage-allowlist.txt  .env.example  .gitattributes  .gitignore  .golangci.yaml  .it-merge-test.txt  .it-pr-test.txt  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_FLOOR.md  HANDOFF.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  comment-1172.json  comment-1173.json  docker-compose.infra.yml  docker-compose.yml  manifest.json  package-lock.json  package.json  qa-audit-2026-04-21.md  railway.toml  render.yaml  test-pmm-temp.txt  test.txt  tick-reflections-temp.md  tool-trace-platform-instructions-narration.txt
workspace-template/: Dockerfile  a2a_client.py  a2a_executor.py  a2a_tools.py  build-all.sh  claude_sdk_executor.py  cli_executor.py  config.py  consolidation.py  coordinator.py  entrypoint.sh  events.py  executor_helpers.py  heartbeat.py  hermes_executor.py  main.py  platform_auth.py  plugins.py  pyproject.toml  rebuild-runtime-images.sh  transcript_auth.py  watcher.py
workspace-template/adapters/: base.py  shared_runtime.py
workspace-template/builtin_tools/: approval.py  hitl.py  medo.py  memory.py  security.py  security_scan.py  temporal_workflow.py
workspace-template/molecule_audit/: ledger.py  verify.py
workspace-template/plugins_registry/: builtins.py
workspace-template/scripts/: molecule-git-token-helper.sh
workspace-template/skill_loader/: loader.py
workspace-template/tests/: test_a2a_client.py  test_adapters.py  test_audit_ledger.py  test_claude_sdk_executor.py  (+22 more)
(+1679 files in other folders)
